made feedback page into forum like style

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -11,17 +11,64 @@
     "feature5": "Interactive width controls for testing responsiveness",
     "feedback": {
         "buttonText": "Feedback",
-        "title": "We'd Love Your Feedback!",
-        "subtitle": "Help us improve Nearby Community",
-        "description": "Your feedback is valuable to us. Please share your thoughts, suggestions, or report any issues you've encountered.",
+        "title": "Community Forum",
+        "subtitle": "Share your feedback, report bugs, and suggest enhancements",
+        "description": "Join the conversation! Share your thoughts, report issues, and help us improve Nearby Community together.",
+        "filterByVersion": "Filter by Version",
+        "allVersions": "All Versions",
+        "filterByTopic": "Filter by Topic",
+        "allTopics": "All Topics",
+        "topicFeedback": "Feedback",
+        "topicBug": "Bug",
+        "topicEnhancement": "Enhancement",
+        "addMessage": "Add Your Message",
+        "nameLabel": "Name or Nickname",
+        "namePlaceholder": "Enter your name or nickname",
+        "versionLabel": "App Version",
+        "selectVersion": "Select version",
+        "topicLabel": "Topic",
+        "selectTopic": "Select topic",
         "emailLabel": "Your Email (optional)",
         "emailPlaceholder": "your.email@example.com",
         "messageLabel": "Your Message",
         "messagePlaceholder": "Tell us what you think...",
-        "submitButton": "Send Feedback",
+        "submitButton": "Post Message",
+        "submitting": "Posting...",
         "cancelButton": "Cancel",
-        "successMessage": "Thank you for your feedback!",
+        "successMessage": "Message Posted Successfully!",
+        "successDescription": "Your message has been added to the forum. Thank you for your contribution!",
+        "addAnother": "Add Another Message",
+        "errorName": "Please enter your name or nickname.",
+        "errorVersion": "Please select an app version.",
+        "errorTopic": "Please select a topic.",
         "errorMessage": "Please enter your message.",
+        "errorRecaptcha": "reCAPTCHA verification failed. Please try again.",
+        "recaptchaNotice": "This site is protected by reCAPTCHA and the Google Privacy Policy and Terms of Service apply.",
+        "messagesTitle": "Community Messages",
+        "messagesCount": "messages",
+        "noMessages": "No messages found. Be the first to share your thoughts!",
+        "today": "Today",
+        "yesterday": "Yesterday",
+        "daysAgo": "days ago",
+        "justNow": "Just now",
+        "minutesAgo": "minutes ago",
+        "hoursAgo": "hours ago",
+        "comments": "Comments",
+        "addComment": "Add Comment",
+        "hideCommentForm": "Hide Form",
+        "commentNameLabel": "Your Name",
+        "commentNamePlaceholder": "Enter your name",
+        "adminPasswordLabel": "Admin Password",
+        "adminPasswordPlaceholder": "Enter admin password",
+        "adminPasswordHint": "Only administrators can post comments",
+        "commentMessageLabel": "Comment",
+        "commentMessagePlaceholder": "Write your comment...",
+        "postComment": "Post Comment",
+        "adminBadge": "Admin",
+        "errorCommentName": "Please enter your name.",
+        "errorCommentPassword": "Please enter the admin password.",
+        "errorCommentMessage": "Please enter your comment.",
+        "errorInvalidPassword": "Invalid admin password. Only administrators can post comments.",
         "contactEmail": "nearcomapp@gmail.com"
     },
     "privacyPolicy": {
