--- a/src/i18n/locales/hu.json
+++ b/src/i18n/locales/hu.json
@@ -11,17 +11,64 @@
     "feature5": "Interaktív szélesség vezérlők a reszponzivitás teszteléséhez",
     "feedback": {
         "buttonText": "Visszajelzés",
-        "title": "Szeretnénk hallani a véleményedet!",
-        "subtitle": "Segíts nekünk fejleszteni a Közeli Közösséget",
-        "description": "A visszajelzésed értékes számunkra. Kérjük, oszd meg gondolataidat, javaslataidat vagy jelents bármilyen problémát, amellyel találkoztál.",
+        "title": "Közösségi Fórum",
+        "subtitle": "Oszd meg visszajelzésed, jelentsd a hibákat és javasolj fejlesztéseket",
+        "description": "Csatlakozz a beszélgetéshez! Oszd meg gondolataidat, jelentsd a problémákat és segíts nekünk együtt fejleszteni a Közeli Közösséget.",
+        "filterByVersion": "Szűrés verzió szerint",
+        "allVersions": "Összes verzió",
+        "filterByTopic": "Szűrés téma szerint",
+        "allTopics": "Összes téma",
+        "topicFeedback": "Visszajelzés",
+        "topicBug": "Hiba",
+        "topicEnhancement": "Fejlesztés",
+        "addMessage": "Üzenet hozzáadása",
+        "nameLabel": "Név vagy becenév",
+        "namePlaceholder": "Add meg a neved vagy beceneved",
+        "versionLabel": "Alkalmazás verzió",
+        "selectVersion": "Válassz verziót",
+        "topicLabel": "Téma",
+        "selectTopic": "Válassz témát",
         "emailLabel": "Email címed (opcionális)",
         "emailPlaceholder": "email.cimed@pelda.hu",
         "messageLabel": "Üzeneted",
         "messagePlaceholder": "Mondd el, mit gondolsz...",
-        "submitButton": "Visszajelzés küldése",
+        "submitButton": "Üzenet küldése",
+        "submitting": "Küldés...",
         "cancelButton": "Mégse",
-        "successMessage": "Köszönjük a visszajelzésed!",
+        "successMessage": "Üzenet sikeresen elküldve!",
+        "successDescription": "Az üzeneted hozzá lett adva a fórumhoz. Köszönjük a hozzájárulásod!",
+        "addAnother": "Újabb üzenet hozzáadása",
+        "errorName": "Kérjük, add meg a neved vagy beceneved.",
+        "errorVersion": "Kérjük, válassz egy alkalmazás verziót.",
+        "errorTopic": "Kérjük, válassz egy témát.",
         "errorMessage": "Kérjük, írd be az üzenetedet.",
+        "errorRecaptcha": "reCAPTCHA ellenőrzés sikertelen. Kérjük, próbáld újra.",
+        "recaptchaNotice": "Ez az oldal a reCAPTCHA védelme alatt áll, és a Google Adatvédelmi irányelvei és Szolgáltatási feltételei érvényesek.",
+        "messagesTitle": "Közösségi üzenetek",
+        "messagesCount": "üzenet",
+        "noMessages": "Nincsenek üzenetek. Légy az első, aki megosztja gondolatait!",
+        "today": "Ma",
+        "yesterday": "Tegnap",
+        "daysAgo": "napja",
+        "justNow": "Épp most",
+        "minutesAgo": "perce",
+        "hoursAgo": "órája",
+        "comments": "Hozzászólások",
+        "addComment": "Hozzászólás hozzáadása",
+        "hideCommentForm": "Űrlap elrejtése",
+        "commentNameLabel": "Neved",
+        "commentNamePlaceholder": "Add meg a neved",
+        "adminPasswordLabel": "Admin jelszó",
+        "adminPasswordPlaceholder": "Add meg az admin jelszót",
+        "adminPasswordHint": "Csak adminisztrátorok írhatnak hozzászólást",
+        "commentMessageLabel": "Hozzászólás",
+        "commentMessagePlaceholder": "Írd meg a hozzászólásodat...",
+        "postComment": "Hozzászólás küldése",
+        "adminBadge": "Admin",
+        "errorCommentName": "Kérjük, add meg a neved.",
+        "errorCommentPassword": "Kérjük, add meg az admin jelszót.",
+        "errorCommentMessage": "Kérjük, írd be a hozzászólásodat.",
+        "errorInvalidPassword": "Érvénytelen admin jelszó. Csak adminisztrátorok írhatnak hozzászólást.",
         "contactEmail": "nearcomapp@gmail.com"
     },
     "privacyPolicy": {
