email / password needed for comment

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -28,8 +28,12 @@
         "selectVersion": "Select version",
         "topicLabel": "Topic",
         "selectTopic": "Select topic",
-        "emailLabel": "Your Email (optional)",
-        "emailPlaceholder": "your.email{'@'}example.com",
+        "emailLabel": "Email (optional)",
+        "emailPlaceholder": "Enter email if you want to react to your message",
+        "passwordLabel": "Password (optional)",
+        "passwordPlaceholder": "Enter password if you want to react to your message",
+        "authNoticeTitle": "Want to react to your own message?",
+        "authNoticeMessage": "If you want to comment on your own message later, please provide both email and password. Otherwise, these fields are optional.",
         "messageLabel": "Your Message",
         "messagePlaceholder": "Tell us what you think...",
         "submitButton": "Post Message",
@@ -39,9 +43,15 @@
         "successDescription": "Your message has been added to the forum. Thank you for your contribution!",
         "addAnother": "Add Another Message",
         "errorName": "Please enter your name or nickname.",
+        "errorNameLength": "Name cannot exceed 100 characters.",
         "errorVersion": "Please select an app version.",
         "errorTopic": "Please select a topic.",
         "errorMessage": "Please enter your message.",
+        "errorMessageMin": "Message must be at least 10 characters.",
+        "errorMessageMax": "Message cannot exceed 2000 characters.",
+        "errorEmailInvalid": "Please provide a valid email address.",
+        "errorPasswordMin": "Password must be at least 6 characters.",
+        "errorPasswordRequiresEmail": "Email is required when password is provided.",
         "errorRecaptcha": "reCAPTCHA verification failed. Please try again.",
         "recaptchaNotice": "This site is protected by reCAPTCHA and the Google Privacy Policy and Terms of Service apply.",
         "messagesTitle": "Community Messages",
@@ -56,19 +66,24 @@
         "comments": "Comments",
         "addComment": "Add Comment",
         "hideCommentForm": "Hide Form",
-        "commentNameLabel": "Your Name",
-        "commentNamePlaceholder": "Enter your name",
-        "adminPasswordLabel": "Admin Password",
-        "adminPasswordPlaceholder": "Enter admin password",
-        "adminPasswordHint": "Only administrators can post comments",
+        "commentEmailLabel": "Email",
+        "commentEmailPlaceholder": "Enter your email",
+        "commentPasswordLabel": "Password",
+        "commentPasswordPlaceholder": "Enter your password",
+        "commentPasswordHint": "Use your message password",
         "commentMessageLabel": "Comment",
         "commentMessagePlaceholder": "Write your comment...",
         "postComment": "Post Comment",
         "adminBadge": "Admin",
-        "errorCommentName": "Please enter your name.",
-        "errorCommentPassword": "Please enter the admin password.",
+        "errorCommentEmail": "Please enter your email.",
+        "errorCommentEmailInvalid": "Please provide a valid email address.",
+        "errorCommentPassword": "Please enter your password.",
         "errorCommentMessage": "Please enter your comment.",
-        "errorInvalidPassword": "Invalid admin password. Only administrators can post comments.",
+        "errorCommentMessageMin": "Comment must be at least 5 characters.",
+        "errorCommentMessageMax": "Comment cannot exceed 1000 characters.",
+        "errorInvalidCredentials": "Invalid email or password. You can only comment on your own messages.",
+        "errorNoAuth": "This message does not have authentication enabled. Only admins can comment.",
+        "errorAuthRequired": "Authentication required. Provide your message credentials.",
         "contactEmail": "nearcomapp@gmail.com"
     },
     "privacyPolicy": {
