--- a/src/i18n/locales/hu.json
+++ b/src/i18n/locales/hu.json
@@ -28,8 +28,12 @@
         "selectVersion": "Válassz verziót",
         "topicLabel": "Téma",
         "selectTopic": "Válassz témát",
-        "emailLabel": "Email címed (opcionális)",
-        "emailPlaceholder": "email.cimed{'@'}pelda.hu",
+        "emailLabel": "Email cím (opcionális)",
+        "emailPlaceholder": "Adj meg email címet, ha reagálni szeretnél az üzenetedre",
+        "passwordLabel": "Jelszó (opcionális)",
+        "passwordPlaceholder": "Adj meg jelszót, ha reagálni szeretnél az üzenetedre",
+        "authNoticeTitle": "Szeretnél reagálni a saját üzenetedre?",
+        "authNoticeMessage": "Ha később hozzá szeretnél szólni a saját üzenetedhez, kérjük, add meg az email címed és a jelszót is. Egyébként ezek a mezők opcionálisak.",
         "messageLabel": "Üzeneted",
         "messagePlaceholder": "Mondd el, mit gondolsz...",
         "submitButton": "Üzenet küldése",
@@ -39,9 +43,15 @@
         "successDescription": "Az üzeneted hozzá lett adva a fórumhoz. Köszönjük a hozzájárulásod!",
         "addAnother": "Újabb üzenet hozzáadása",
         "errorName": "Kérjük, add meg a neved vagy beceneved.",
+        "errorNameLength": "A név nem haladhatja meg a 100 karaktert.",
         "errorVersion": "Kérjük, válassz egy alkalmazás verziót.",
         "errorTopic": "Kérjük, válassz egy témát.",
         "errorMessage": "Kérjük, írd be az üzenetedet.",
+        "errorMessageMin": "Az üzenet legalább 10 karakter hosszú legyen.",
+        "errorMessageMax": "Az üzenet nem haladhatja meg a 2000 karaktert.",
+        "errorEmailInvalid": "Kérjük, adj meg egy érvényes email címet.",
+        "errorPasswordMin": "A jelszónak legalább 6 karakter hosszúnak kell lennie.",
+        "errorPasswordRequiresEmail": "Email cím szükséges, ha jelszót adsz meg.",
         "errorRecaptcha": "reCAPTCHA ellenőrzés sikertelen. Kérjük, próbáld újra.",
         "recaptchaNotice": "Ez az oldal a reCAPTCHA védelme alatt áll, és a Google Adatvédelmi irányelvei és Szolgáltatási feltételei érvényesek.",
         "messagesTitle": "Közösségi üzenetek",
@@ -56,19 +66,24 @@
         "comments": "Hozzászólások",
         "addComment": "Hozzászólás hozzáadása",
         "hideCommentForm": "Űrlap elrejtése",
-        "commentNameLabel": "Neved",
-        "commentNamePlaceholder": "Add meg a neved",
-        "adminPasswordLabel": "Admin jelszó",
-        "adminPasswordPlaceholder": "Add meg az admin jelszót",
-        "adminPasswordHint": "Csak adminisztrátorok írhatnak hozzászólást",
+        "commentEmailLabel": "Email",
+        "commentEmailPlaceholder": "Add meg az email címed",
+        "commentPasswordLabel": "Jelszó",
+        "commentPasswordPlaceholder": "Add meg a jelszavad",
+        "commentPasswordHint": "Használd az üzeneted jelszavát",
         "commentMessageLabel": "Hozzászólás",
         "commentMessagePlaceholder": "Írd meg a hozzászólásodat...",
         "postComment": "Hozzászólás küldése",
         "adminBadge": "Admin",
-        "errorCommentName": "Kérjük, add meg a neved.",
-        "errorCommentPassword": "Kérjük, add meg az admin jelszót.",
+        "errorCommentEmail": "Kérjük, add meg az email címed.",
+        "errorCommentEmailInvalid": "Kérjük, adj meg egy érvényes email címet.",
+        "errorCommentPassword": "Kérjük, add meg a jelszavad.",
         "errorCommentMessage": "Kérjük, írd be a hozzászólásodat.",
-        "errorInvalidPassword": "Érvénytelen admin jelszó. Csak adminisztrátorok írhatnak hozzászólást.",
+        "errorCommentMessageMin": "A hozzászólás legalább 5 karakter hosszú legyen.",
+        "errorCommentMessageMax": "A hozzászólás nem haladhatja meg az 1000 karaktert.",
+        "errorInvalidCredentials": "Érvénytelen email vagy jelszó. Csak a saját üzenetedhez szólhatsz hozzá.",
+        "errorNoAuth": "Ez az üzenet nem rendelkezik hitelesítéssel. Csak adminok írhatnak hozzászólást.",
+        "errorAuthRequired": "Hitelesítés szükséges. Add meg az üzeneted hitelesítő adatait.",
         "contactEmail": "nearcomapp@gmail.com"
     },
     "privacyPolicy": {
